--- a/www.topmonks.com/src/stylesheets/xixoio.scss
+++ b/www.topmonks.com/src/stylesheets/xixoio.scss
@@ -107,11 +107,11 @@ body {
   }
   .tm-hamburger__container::after {
     content: "menu";
-    color: rgba(255, 255, 255, 0.5);
+    color: white;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 14px;
     position: absolute;
-    top: 5px;
+    top: 0;
     left: 36px;
   }
   .tm-hamburger__bar {
