--- a/www.topmonks.com/src/stylesheets/jobs.scss
+++ b/www.topmonks.com/src/stylesheets/jobs.scss
@@ -73,7 +73,7 @@ p, a {
     @media screen and (min-width: 840px) {
       padding: 18px 40px 38px;
     }
-    @media (min-width: 1024px) and (max-width: 1840px){
+    @media (min-width: 1024px) and (max-width: 1840px) {
       min-height: 300px;
     }
   }
@@ -92,6 +92,21 @@ p, a {
 
   svg {
     padding: 8px 0;
+  }
+
+  h3 {
+    font-size: 24px;
+    line-height: 26px;
+    text-align: left;
+    font-weight: bold;
+  }
+
+  .value-orange {
+    color: #FE664B;
+  }
+
+  .value-purple {
+    color: #5C5FD4;
   }
 
   @media (max-width: 480px) {
