--- a/www.topmonks.cz/src/stylesheets/jobs.scss
+++ b/www.topmonks.cz/src/stylesheets/jobs.scss
@@ -72,7 +72,7 @@ p, a {
     @media screen and (min-width: 840px) {
       padding: 18px 40px 38px;
     }
-    @media (min-width: 1024px) and (max-width: 1840px){
+    @media (min-width: 1024px) and (max-width: 1840px) {
       min-height: 300px;
     }
   }
@@ -85,6 +85,21 @@ p, a {
 .tm-values {
   .button {
     text-align: center;
+  }
+
+  h3 {
+    font-size: 24px;
+    line-height: 26px;
+    text-align: left;
+    font-weight: bold;
+  }
+
+  .value-orange {
+    color: #FE664B;
+  }
+
+  .value-purple {
+    color: #5C5FD4;
   }
 
   svg {
