--- a/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
+++ b/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
@@ -64,7 +64,7 @@
   text-align: center;
 }
 .tm-case-studies__logo--gorealeurope .tm-bgnd-wrapper {
-  background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
+  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
 }
 .tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
   background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
@@ -80,7 +80,7 @@
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .tm-case-studies__logo--gorealeurope .tm-bgnd-wrapper {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
   }
   .tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
