--- a/caffe.topmonks.cz/src/stylesheets/typography.scss
+++ b/caffe.topmonks.cz/src/stylesheets/typography.scss
@@ -16,7 +16,8 @@ body {
   margin: 0 auto;
   max-width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica,
-  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  font-weight: normal;
+  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: normal;
   -webkit-font-kerning: normal;
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
@@ -48,21 +49,34 @@ body {
   font-family: futura-pt, sans-serif;
 }
 
-h1 {
-  font-size: 3em;
-  font-weight: normal;
+@media (min-width: 840px) {
+  h1 {
+    font-size: 3em;
+    font-weight: normal;
+  }
 
+  h2 {
+    font-size: 2em;
+    font-weight: normal;
+  }
+
+  p {
+    font-size: 1.125em;
+    font-weight: normal;
+    line-height: 1.4;
+  }
 }
 
-h2 {
-  font-size: 2em;
-  font-weight: normal;
-}
-
-p {
-  font-size: 1.125em;
-  font-weight: normal;
-  line-height: 1.4;
+@media (max-width: 839px) {
+  h1 {
+    font-size: 1.5em;
+  }
+  h2 {
+    font-size: 1.125em;
+  }
+  p {
+    font-size: 1em;
+  }
 }
 
 a {
@@ -74,6 +88,7 @@ a {
 ul,
 ul li {
   padding: 0;
+
   a {
     color: #233341;
   }
@@ -100,6 +115,7 @@ ul#navigace {
   a {
     font-size: 18px;
     padding: 4px 8px;
+
     &:hover {
       border-bottom: 1px solid #02A3C8;
     }
