caffe.tm: seance section: h4, p margins

--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -342,6 +342,12 @@ ul#navigace {
 
 //* Section: Seance *//
 #seance {
+  h4 {
+    margin: 0.5em 0;
+  }
+  p {
+    margin: 0.5em 0;
+  }
   img {
     width: 100%;
   }
