--- a/www.topmonks.com/src/stylesheets/jobs.scss
+++ b/www.topmonks.com/src/stylesheets/jobs.scss
@@ -1,14 +1,31 @@
 main {
   @media (min-width: 1301px) and (max-width: 1800px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1551973762/topmonks.com/jobs/img_side.png") center 6.5% no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_440/v1551973762/topmonks.com/jobs/img_side.png") center 6.5% no-repeat;
     background-size: 440px 571px;
-    background-position-x: 0;
+  }
+  @media (min-width: 1301px) and (max-width: 1800px) and (min-resolution: 1.5dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_440,dpr_1.5/v1551973762/topmonks.com/jobs/img_side.png");
+  }
+  @media (min-width: 1301px) and (max-width: 1800px) and (min-resolution: 2dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_440,dpr_2/v1551973762/topmonks.com/jobs/img_side.png");
+  }
+  @media (min-width: 1301px) and (max-width: 1800px) and (min-resolution: 3dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_440,dpr_3/v1551973762/topmonks.com/jobs/img_side.png");
   }
   @media (min-width: 1024px) and (max-width: 1300px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1551973762/topmonks.com/jobs/img_side.png") center 6.5% no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_336/v1551973762/topmonks.com/jobs/img_side.png") center 6.5% no-repeat;
     background-size: 336px 467px;
-    background-position-x: 0;
   }
+  @media (min-width: 1024px) and (max-width: 1300px) and (min-resolution: 1.5dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_336,dpr_1.5/v1551973762/topmonks.com/jobs/img_side.png");
+  }
+  @media (min-width: 1024px) and (max-width: 1300px) and (min-resolution: 2dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_336,dpr_2/v1551973762/topmonks.com/jobs/img_side.png");
+  }
+  @media (min-width: 1024px) and (max-width: 1300px) and (min-resolution: 3dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,w_336,dpr_3/v1551973762/topmonks.com/jobs/img_side.png");
+  }
+  background-position-x: 0;
 }
 
 p, a {
@@ -236,7 +253,7 @@ p, a {
 
 @media screen and (min-width: 1030px) {
   body {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1548594687/topmonks.com/rounded_bgnd.png") center 46.5% no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto/v1548594687/topmonks.com/rounded_bgnd.png") center 46.5% no-repeat;
     background-size: 100%;
   }
   #gallery {
