--- a/www.topmonks.com/src/stylesheets/jobs.scss
+++ b/www.topmonks.com/src/stylesheets/jobs.scss
@@ -1,6 +1,6 @@
 main {
   @media (min-width: 1301px) and (max-width: 1800px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_440/v1551973762/topmonks.com/jobs/img_side.png") center 6.5% no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_440/v1551973762/topmonks.com/jobs/img_side.png") 0 240px no-repeat;
     background-size: 440px 571px;
   }
   @media (min-width: 1301px) and (max-width: 1800px) and (min-resolution: 1.5dppx) {
@@ -13,7 +13,7 @@ main {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_440,dpr_3/v1551973762/topmonks.com/jobs/img_side.png");
   }
   @media (min-width: 1024px) and (max-width: 1300px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_336/v1551973762/topmonks.com/jobs/img_side.png") center 6.5% no-repeat;
+    background: url("https://res.cloudinary.com/topmonks/image/upload/f_auto,w_336/v1551973762/topmonks.com/jobs/img_side.png") 0 280px no-repeat;
     background-size: 336px 467px;
   }
   @media (min-width: 1024px) and (max-width: 1300px) and (min-resolution: 1.5dppx) {
