--- a/www.topmonks.com/src/stylesheets/about-us.scss
+++ b/www.topmonks.com/src/stylesheets/about-us.scss
@@ -1,6 +1,6 @@
 //* Section: How We Work *//
 #how-we-work {
-  background-image: url("/images/bgnd_curve_1.svg");
+  background-image: url("/assets/img/bgnd_curve_1.svg");
   background-repeat: no-repeat;
   background-position: bottom -5px left calc(50% - 530px);
   @media screen and (min-width: 480px) {
@@ -65,7 +65,7 @@
 }
 .tm-team {
   padding: 0 0 4%;
-  background: #fff url(/images/bgnd_curve_3.svg) bottom no-repeat;
+  background: #fff url(/assets/img/bgnd_curve_3.svg) bottom no-repeat;
   background-size: 100% auto;
 
   .tm-bgnd-wrapper {
