--- a/www.topmonks.com/src/stylesheets/case-studies-common.scss
+++ b/www.topmonks.com/src/stylesheets/case-studies-common.scss
@@ -1,12 +1,12 @@
 .tm-case-study__hero {
-  background-image: url("/images/bgnd_curve_1.svg");
+  background-image: url("/assets/img/bgnd_curve_1.svg");
   background-repeat: no-repeat;
   h3 {
     font-weight: 400;
   }
   .tm-bgnd-wrapper {
     padding: 0 0 4%;
-    background: #fff url(/images/bgnd_curve_3.svg) bottom no-repeat;
+    background: #fff url(/assets/img/bgnd_curve_3.svg) bottom no-repeat;
     background-size: 100% auto;
 
     & > .mdc-layout-grid {
