--- a/www.topmonks.com/src/stylesheets/typography.scss
+++ b/www.topmonks.com/src/stylesheets/typography.scss
@@ -45,10 +45,12 @@ body {
   font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
   Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
   "Segoe UI Symbol";
+  font-weight: 400;
 }
 
-.wf-active .tm-logo {
+.wf-futurapt-n6-active .tm-logo {
   font-family: futura-pt, sans-serif;
+  font-weight: 600;
 }
 
 h1,
