--- a/www.topmonks.com/src/stylesheets/hp/cooperation.scss
+++ b/www.topmonks.com/src/stylesheets/hp/cooperation.scss
@@ -33,8 +33,8 @@
   }
   //svg logo colors
   .-img_logo_pricefx {
-    --color-1: #0f243e;
-    --color-2: #5a96c6;
+    --color-1: #31b4e7;
+    --color-2: #414142;
   }
   .-img_logo_erste-group {
     --color-1: #eb2227;
