--- a/www.topmonks.com/src/html/components/case-studies/index.html
+++ b/www.topmonks.com/src/html/components/case-studies/index.html
@@ -30,7 +30,7 @@
           <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
             <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div>
           </div>
-          <h3>Price f(x)</h3></a>
+          <h3>PriceFx</h3></a>
         <p>Providing consulting professionals to support servicing a rapidly expanding portfolio of customers, and also
           helping to improve UX of the current website.</p>
       </div>
