--- a/www.topmonks.cz/src/html/components/case-studies/index.html
+++ b/www.topmonks.cz/src/html/components/case-studies/index.html
@@ -27,8 +27,9 @@
         <a href="/jak-pracujeme/price-fx">
           <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
             <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
-          <h3>PriceFx</h3></a>
-        <p>Poskytnutí profesionální konzultace na podporu služeb rozšiřujících portfolio zákazníků, a zároveň také pomoc při zlepšování UX pro webové stránky.</p>
+          <h3>Pricefx</h3></a>
+        <p>Poskytnutí profesionální konzultace na podporu služeb rozšiřujících portfolio zákazníků, a
+          zároveň také pomoc při zlepšování UX pro webové stránky.</p>
       </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'cs' %}
