--- a/studio.topmonks.com/src/stylesheets/typography.scss
+++ b/studio.topmonks.com/src/stylesheets/typography.scss
@@ -22,7 +22,6 @@ body {
 
 ul {
   padding: 0;
-
 }
 ul li {
   list-style: none;
@@ -43,16 +42,16 @@ ul li {
   font-family: futura-pt, sans-serif;
 }
 
-input, textarea{
+input,
+textarea {
   font-size: 18px;
 }
 
 textarea {
   font-family: Lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
-  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-  "Segoe UI Symbol";
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
 }
-
 
 h1 {
   font-size: 48px;
