--- a/www.topmonks.cz/src/stylesheets/footer.scss
+++ b/www.topmonks.cz/src/stylesheets/footer.scss
@@ -1,5 +1,5 @@
 .tm-footer {
-  background-color: var(--tm-secondary);
+  background-color: var(--tm-logo);
   color: #fff;
 }
 
@@ -71,4 +71,3 @@ text-align: right;
     text-align: left;
   }
 }
-
