--- a/www.topmonks.cz/src/stylesheets/typography.scss
+++ b/www.topmonks.cz/src/stylesheets/typography.scss
@@ -8,9 +8,13 @@
   --tm-secondary-dark: #1d35a2;
   --tm-secondary-light: #918cff;
   --tm-grey: #9b9b9b;
+  --tm-logo: var(--tm-black-title);
   --tm-article-background: #f8fbfc;
   --tm-black: #4a4a4a;
   --tm-black-title: #3c3c3b;
+  --tm-white: #fff;
+
+  --tm-hamburger-label: rgba(255,255,255,0.25);
 }
 
 /*
