--- a/www.topmonks.cz/src/stylesheets/main.scss
+++ b/www.topmonks.cz/src/stylesheets/main.scss
@@ -4,6 +4,9 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+
+  --tm-basic-shadow: 2px 4px 10px rgba(92,95,212,.1);
+  --tm-button-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
 }
 
 body {
@@ -109,7 +112,7 @@ p {
   border-radius: 100px;
   color: #fff;
   background-color: var(--tm-primary);
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
+  box-shadow: var(--tm-button-shadow);
   padding: 10px 28px;
   width: max-content;
   margin: 0 1em;
