--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -4,6 +4,8 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+
+  --tm-btn-transition: all 100ms ease-in-out;
 }
 
 body {
@@ -116,6 +118,8 @@ p {
   text-align: center;
   text-transform: uppercase;
 
+  transition: var(--tm-btn-transition);
+
   &:hover {
     text-decoration: none;
     background-color: var(--tm-primary-dark);
@@ -145,6 +149,8 @@ p {
   padding: 6px 8px;
   margin: 16px 0 8px -8px;
   border-radius: 4px;
+
+  transition: var(--tm-btn-transition);
 
   &:hover {
     text-decoration: none;
