--- a/balehu.topmonks.com/src/stylesheets/main.scss
+++ b/balehu.topmonks.com/src/stylesheets/main.scss
@@ -4,3 +4,16 @@
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
 }
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.tm-layout-wrapper {
+  max-width: 1030px;
+  margin: 0 auto;
+  //--mdc-layout-grid-margin-desktop: 0;
+  //--mdc-layout-grid-margin-tablet: 0;
+  //--mdc-layout-grid-margin-phone: 0;
+}
