--- a/balehu.topmonks.com/src/stylesheets/main.scss
+++ b/balehu.topmonks.com/src/stylesheets/main.scss
@@ -10,7 +10,7 @@ body {
   margin: 0;
 }
 
-.tm-layout-wrapper {
+.bl-layout-wrapper {
   max-width: 1030px;
   margin: 0 auto;
   //--mdc-layout-grid-margin-desktop: 0;
@@ -18,20 +18,34 @@ body {
   //--mdc-layout-grid-margin-phone: 0;
 }
 
-.tns-nav {
-  text-align: center;
+.tns {
+  &-nav {
+    text-align: center;
 
-  > .tns-nav-active {
-    background: #999;
+    > .tns-nav-active {
+      background: #999;
+    }
+
+    > [aria-controls] {
+      width: 9px;
+      height: 9px;
+      padding: 0;
+      margin: 0 5px;
+      border-radius: 50%;
+      background: #ddd;
+      border: 0;
+    }
   }
+  &-item img {
+    width: 100%;
+  }
+  &-slider {
+    padding-left: 0;
+  }
+}
 
-  > [aria-controls] {
-    width: 9px;
-    height: 9px;
-    padding: 0;
-    margin: 0 5px;
-    border-radius: 50%;
-    background: #ddd;
-    border: 0;
+@media screen and (max-width: 480px){
+  .bl-layout--order-1-mobile {
+    order: 1;
   }
 }
